fix flip on mobile devices

--- a/typo3conf/ext/vca_millerntor_theme/Resources/Private/Less/Theme/millerntor.less
+++ b/typo3conf/ext/vca_millerntor_theme/Resources/Private/Less/Theme/millerntor.less
@@ -243,6 +243,9 @@
   }
   
 }
+.flip_container.vert:hover .flip_card {
+	  transform: rotateY(180deg);
+}
 .vert .face.back {
 	transform: rotateY(180deg);
 }
@@ -506,6 +509,58 @@ ul.work-artists {
 	}
 	
 }
+}
+	
+	/**************
+* Logo Flip
+**************/
+
+.flip_container {
+  position: relative;
+  margin: 0px auto;
+  z-index: 1;
+  perspective: 1000;
+}
+#f1_container {
+  width: 119px;
+  height: 150px;
+}
+
+.flip_card {
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: all 1.0s linear;
+}
+.flip_container:hover .flip_card {
+	  transform: rotateX(180deg);
+}
+.flip_container.vert:hover .flip_card {
+	  transform: rotateY(180deg);
+}
+	
+.face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+.face.back {
+  display: none;
+  transform: rotateX(180deg);
+  box-sizing: border-box;
+  text-align: center;
+  
+  p {
+  	text-align: left;
+  }
+  
+}
+.flip_container.vert:hover .flip_card {
+	  transform: rotateY(180deg);
+}
+.vert .face.back {
+	transform: rotateY(180deg);
 }
 	
 	
