--- a/typo3conf/ext/vca_millerntor_theme/Resources/Public/Css/application.css
+++ b/typo3conf/ext/vca_millerntor_theme/Resources/Public/Css/application.css
@@ -5673,6 +5673,9 @@ button.close {
 .face.back p {
   text-align: left;
 }
+.flip_container.vert:hover .flip_card {
+  transform: rotateY(180deg);
+}
 .vert .face.back {
   transform: rotateY(180deg);
 }
@@ -5901,5 +5904,51 @@ ul.work-artists li a {
     font-size: 14px;
     color: black;
     text-transform: uppercase;
+  }
+  /**************
+* Logo Flip
+**************/
+  .flip_container {
+    position: relative;
+    margin: 0px auto;
+    z-index: 1;
+    perspective: 1000;
+  }
+  #f1_container {
+    width: 119px;
+    height: 150px;
+  }
+  .flip_card {
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: all 1.0s linear;
+  }
+  .flip_container:hover .flip_card {
+    transform: rotateX(180deg);
+  }
+  .flip_container.vert:hover .flip_card {
+    transform: rotateY(180deg);
+  }
+  .face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+  }
+  .face.back {
+    display: none;
+    transform: rotateX(180deg);
+    box-sizing: border-box;
+    text-align: center;
+  }
+  .face.back p {
+    text-align: left;
+  }
+  .flip_container.vert:hover .flip_card {
+    transform: rotateY(180deg);
+  }
+  .vert .face.back {
+    transform: rotateY(180deg);
   }
 }
